# wavewatch

./: README.md
.github/workflows/: server.yml
remote/: Cargo.toml  README.md
remote/src/: config.rs  error.rs  main.rs  rf_explorer.rs  server_client.rs
server/: AnalyzerHub.cs  Dockerfile  IAnalyzerClient.cs  Program.cs  README.md  TraceData.cs  appsettings.Development.json  appsettings.json  wavewatch-server.csproj  wavewatch-server.http
server/Properties/: launchSettings.json
ui/: .gitignore  README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
ui/src/components/: Header.astro  SerialNumberInput.astro  SignalRConnection.astro  SpectrumCharts.astro
ui/src/layouts/: Layout.astro
ui/src/pages/: dash.astro  demo.astro  index.astro
