[package]
name = "wavewatch-remote"
version = "0.1.0"
edition = "2024"

[dependencies]
rfe = { git = "https://github.com/zleytus/rfe.git" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.0"
